--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,12 @@ dependencies:
   flutter_screenutil: ^5.0.0+2
   flutter_local_notifications: ^16.1.0
   geolocator: ^14.0.0
+  geocoding: ^2.0.0
+  google_maps_flutter: ^2.2.0
+  flutter_map: ^6.1.0
+  flutter_map_cancellable_tile_provider: ^1.0.0
+  latlong2: ^0.9.1
+
 
 dev_dependencies:
   flutter_test:
