--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,14 +16,15 @@ dependencies:
   flutter_svg: ^2.0.10
   google_fonts: ^5.0.0
   flutter_screenutil: ^5.0.0+2
-  flutter_local_notifications: ^16.1.0
   geolocator: ^14.0.0
   geocoding: ^2.0.0
   google_maps_flutter: ^2.2.0
   flutter_map: ^6.1.0
   flutter_map_cancellable_tile_provider: ^1.0.0
   latlong2: ^0.9.1
-
+  # ❌ Eliminado para evitar conflicto
+  # flutter_web_auth_2: ^4.1.0  ❌
+  # ✅ Appwrite ya trae una versión compatible (2.x), no agregues manualmente
 
 dev_dependencies:
   flutter_test:
@@ -32,7 +33,7 @@ dev_dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_lints: ^5.0.0
-  rename: ^3.0.1  # Alternative to flutter_launcher_name that supports null safety
+  rename: ^3.0.1
 
 flutter:
   uses-material-design: true
